--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint src *.ts --fix"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.1.0",
     "@elysiajs/jwt": "^1.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "dayjs": "^1.11.12",
